trying to fix margin on small phones

--- a/main.css
+++ b/main.css
@@ -111,6 +111,7 @@ button {
 }
 .header__hamburgerMenu {
   display: flex;
+  margin: 23px 0;
   min-width: 93vw;
   min-height: 96vh;
   background-color: #011827;
