--- a/src/headerAndHero.scss
+++ b/src/headerAndHero.scss
@@ -97,6 +97,7 @@
 
     &__hamburgerMenu {
         display: flex;
+        margin: 23px 0;
         min-width: 93vw;
         min-height: 96vh;
         background-color: #011827;
